# putrV2

./: .env.example  .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
backend/: __init__.py  config.py  main.py
docs/: GETTING_STARTED.md  TECH_STACK.md
tests/: conftest.py  test_main.py
